--- a/index.html
+++ b/index.html
@@ -1,74 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
-    <style>
-        body {
-            background-color: #f0f8ff;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-        .question {
-            margin: 20px 0;
-        }
-        .options {
-            margin: 10px 0;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
-</head>
-<body>
-    <h1>Quiz App</h1>
-    <form id="quizForm">
-        <div class="question">
-            <h2>1. What is 2 + 2?</h2>
-            <div class="options">
-                <label><input type="radio" name="q1" value="3"> 3</label><br>
-                <label><input type="radio" name="q1" value="4"> 4</label><br>
-                <label><input type="radio" name="q1" value="5"> 5</label><br>
-                <label><input type="radio" name="q1" value="6"> 6</label>
-            </div>
+<div id="quiz">
+    <h2>English Grammar Basics Quiz</h2>
+    <form>
+        <div>
+            <p>1. What is the correct form of the verb in the sentence: "She ___ to the store every Saturday."</p>
+            <label><input type="radio" name="question1" value="a"> a) go</label>
+            <label><input type="radio" name="question1" value="b"> b) goes</label>
+            <label><input type="radio" name="question1" value="c"> c) gone</label>
+            <label><input type="radio" name="question1" value="d"> d) going</label>
         </div>
-        <div class="question">
-            <h2>2. What is 5 - 3?</h2>
-            <div class="options">
-                <label><input type="radio" name="q2" value="1"> 1</label><br>
-                <label><input type="radio" name="q2" value="2"> 2</label><br>
-                <label><input type="radio" name="q2" value="3"> 3</label><br>
-                <label><input type="radio" name="q2" value="0"> 0</label>
-            </div>
+        <div>
+            <p>2. Which of the following is a correct sentence?</p>
+            <label><input type="radio" name="question2" value="a"> a) He go to school.</label>
+            <label><input type="radio" name="question2" value="b"> b) He goes to school.</label>
+            <label><input type="radio" name="question2" value="c"> c) He gone to school.</label>
+            <label><input type="radio" name="question2" value="d"> d) He going to school.</label>
         </div>
-        <button type="submit">Submit</button>
+        <div>
+            <p>3. Choose the correct past tense form: "They ___ a movie last night."</p>
+            <label><input type="radio" name="question3" value="a"> a) watch</label>
+            <label><input type="radio" name="question3" value="b"> b) watched</label>
+            <label><input type="radio" name="question3" value="c"> c) watches</label>
+            <label><input type="radio" name="question3" value="d"> d) watching</label>
+        </div>
+        <div>
+            <p>4. Identify the error: "She don’t like apples."</p>
+            <label><input type="radio" name="question4" value="a"> a) She</label>
+            <label><input type="radio" name="question4" value="b"> b) don’t</label>
+            <label><input type="radio" name="question4" value="c"> c) like</label>
+            <label><input type="radio" name="question4" value="d"> d) apples</label>
+        </div>
+        <button type="button" onclick="submitQuiz()">Submit</button>
     </form>
-    <div id="result" style="margin-top: 20px;"></div>
-    <script>
-        document.getElementById('quizForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            let score = 0;
-            const answers = {
-                q1: '4',
-                q2: '2'
-            };
-            const formData = new FormData(event.target);
-            for (const [key, value] of formData.entries()) {
-                if (answers[key] === value) {
-                    score++;
-                }
-            }
-            document.getElementById('result').innerHTML = `<h2>Your score: ${score} out of 2</h2><h3>Solved Success!</h3>`;
-        });
-    </script>
-</body>
-</html>
+</div>
