--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<div id='quiz'></div>
-<button id='submit'>Submit</button>
+<div id="quiz">
+    <h2>English Grammar Basics Quiz</h2>
+    <div class="question-container">
+        <p id="question"></p>
+        <label><input type="radio" name="answer" class="answer"> <span></span></label>
+        <label><input type="radio" name="answer" class="answer"> <span></span></label>
+        <label><input type="radio" name="answer" class="answer"> <span></span></label>
+        <label><input type="radio" name="answer" class="answer"> <span></span></label>
+    </div>
+    <button id="submit">Submit</button>
+</div>
