--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
-<div id="quiz">
-    <h2>English Grammar Basics Quiz</h2>
-    <div class="question-container">
-        <p id="question"></p>
-        <label><input type="radio" name="answer" class="answer"> <span></span></label>
-        <label><input type="radio" name="answer" class="answer"> <span></span></label>
-        <label><input type="radio" name="answer" class="answer"> <span></span></label>
-        <label><input type="radio" name="answer" class="answer"> <span></span></label>
-    </div>
-    <button id="submit">Submit</button>
-</div>
+<html><body><pre>{
+  "app_code": "const quizData = [\n    {\n        question: 'What is the correct form of the verb in the sentence: She ___ to the store every Saturday.',\n        a: 'go',\n        b: 'goes',\n        c: 'gone',\n        d: 'going',\n        correct: 'b'\n    },\n    {\n        question: 'Which of the following sentences is correct?',\n        a: 'He don\'t like pizza.',\n        b: 'He doesn\'t likes pizza.',\n        c: 'He doesn\'t like pizza.',\n        d: 'He not like pizza.',\n        correct: 'c'\n    },\n    {\n        question: 'Choose the correct form: They ___ playing soccer.',\n        a: 'is',\n        b: 'are',\n        c: 'am',\n        d: 'be',\n        correct: 'b'\n    },\n    {\n        question: 'Identify the error: She have a cat.',\n        a: 'have',\n        b: 'a',\n        c: 'cat',\n        d: 'She',\n        correct: 'a'\n    }\n];\n\nconst quiz = document.getElementById('quiz');\nconst submitButton = document.getElementById('submit');\n\nfunction loadQuiz</pre></body></html>
